Navigation bar cleanup, made more pretty and readable, lines fixed, hovers made better

--- a/css/cw_mainstyle.css
+++ b/css/cw_mainstyle.css
@@ -1573,7 +1573,7 @@ input[value="Search"] {
 }
 
 #basic_body::before, #basic_body::after {
-	content: '';
+	content: "";
 	position: absolute;
 	height: 10px;
 	width: 100vw;
